changed layout issue

--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -70,7 +70,7 @@ header h2 {
 nav ul {
     font-size: large;
     list-style-type: none;
-    padding: 0 2rem 0 0;
+    padding: 0;
     background-color: #e0fbfcb9;
 }
 
